# ShootNLoot

./: .gitignore  CMakeLists.txt  README.md
include/: chunk.h  collision_system.h  entity.h  entity_manager.h  hitbox.h  input.h  level.h  misc_functions.h  player.h  smooth_cam.h  sprite_manager.h  tool.h  weapon.h
src/: collision_system.c  entity.c  entity_manager.c  input.c  level.c  main.c  player.c  smooth_cam.c  sprite_manager.c  tool.c
